--- a/my-demo/pom.xml
+++ b/my-demo/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.maven</groupId>
     <artifactId>my-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
+         <dependencies>
+        <dependency>
+            <groupId>com.learning.jenkins</groupId>
+            <artifactId>test-maven-dependency</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
